--- a/galerie.html
+++ b/galerie.html
@@ -49,16 +49,28 @@
           </tr>
           <tr>
             <td>
-              <img src="pictures/IMG_8658.jpg" alt="" class="foto" />
+              <img
+                src="pictures/525e92663e10ecd95f8702c4c59697a1.jpg"
+                alt=""
+                class="foto"
+              />
             </td>
             <td>
-              <img src="pictures/akce ve stodole.jpg" alt="" class="foto" />
+              <img
+                src="pictures/ab870bc3f15d933a4b5fad320a8c86f1.jpg"
+                alt=""
+                class="foto"
+              />
             </td>
             <td>
-              <img src="pictures/" alt="" class="foto" />
+              <img
+                src="pictures/00ecc5e06cae0130346bc0868807c657.jpg"
+                alt=""
+                class="foto"
+              />
             </td>
             <td>
-              <img class="foto" src="pictures/" />
+              <img class="foto" src="pictures/IMG_8658.jpg" />
             </td>
           </tr>
           <tr>
@@ -93,26 +105,27 @@
             </td>
             <td>
               <img
-                src="pictures/BD8A7104-052A-4721-9071-C82E4FA453C0.jpeg"
+                src="pictures/3d5f19deb7e82337ad47613120faaece.jpg"
                 alt=""
                 class="foto"
               />
             </td>
             <td>
               <img
-                src="pictures/8AD2B110-BBD0-4148-B9A5-4FA9E5FCFFDF.jpeg"
+                src="pictures/455d32e64b1af61e73644c2fc1f06fa9.jpg"
                 alt=""
                 class="foto"
               />
             </td>
             <td>
               <img
-                src="pictures/93477944-681C-4853-A073-3B3C30EBE7D6.jpeg"
+                src="pictures/997d86b2020ee6573e77c2ca14b5366b.jpg"
                 alt=""
                 class="foto"
               />
             </td>
           </tr>
+
           <tr>
             <td>
               <img
@@ -145,7 +158,11 @@
           </tr>
           <tr>
             <td>
-              <img src="pictures/lezení 2.jpg" alt="Lezení" class="foto" />
+              <img
+                src="pictures/2826af3ccbf24149c9da3d01f667f003.jpg"
+                alt=""
+                class="foto"
+              />
             </td>
             <td>
               <img
@@ -162,6 +179,19 @@
               />
             </td>
             <td>
+              <img src="pictures/lezení 2.jpg" alt="" class="foto" />
+            </td>
+          </tr>
+
+          <tr>
+            <td>
+              <img
+                src="pictures/8E1705E4-C97D-483C-AE74-99998A1E5C3B.jpeg"
+                alt=""
+                class="foto"
+              />
+            </td>
+            <td>
               <img
                 src="pictures/D409C723-870B-48E7-91D5-BBB5F47AA63C.jpeg"
                 alt=""
@@ -172,7 +202,21 @@
           <tr>
             <td>
               <img
-                src="pictures/8E1705E4-C97D-483C-AE74-99998A1E5C3B.jpeg"
+                src="pictures/BD8A7104-052A-4721-9071-C82E4FA453C0.jpeg"
+                alt=""
+                class="foto"
+              />
+            </td>
+            <td>
+              <img
+                src="pictures/8AD2B110-BBD0-4148-B9A5-4FA9E5FCFFDF.jpeg"
+                alt=""
+                class="foto"
+              />
+            </td>
+            <td>
+              <img
+                src="pictures/93477944-681C-4853-A073-3B3C30EBE7D6.jpeg"
                 alt=""
                 class="foto"
               />
