galerie.html update

--- a/galerie.html
+++ b/galerie.html
@@ -87,7 +87,37 @@
           </tr>
           <tr>
             <td>
-              <img class="foto" src="pictures/IMG_8946.jpg" alt="" />
+              <img
+                src="pictures/BFD4E8F9-2347-4092-AE09-6D0B66095B04.jpeg"
+                alt=""
+                class="foto"
+              />
+            </td>
+            <td>
+              <img
+                src="pictures/87B55626-BE90-41CA-833E-CD7D86A15952.jpeg"
+                alt=""
+                class="foto"
+              />
+            </td>
+            <td>
+              <img
+                src="pictures/CB474031-144D-47FD-A12D-940720341B82.jpeg"
+                alt=""
+                class="foto"
+              />
+            </td>
+            <td>
+              <img
+                src="pictures/DC124A37-3C0E-4F68-9E02-956B43731CCF.jpeg"
+                alt=""
+                class="foto"
+              />
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <img class="foto" src="pictures/IMG_8660.jpg" alt="" />
             </td>
             <td>
               <img src="pictures/IMG_8661.jpg" alt="" class="foto" />
@@ -198,6 +228,20 @@
                 class="foto"
               />
             </td>
+            <td>
+              <img
+                src="pictures/b0241961dc014faf0c7fb3920f614605.jpg"
+                alt=""
+                class="foto"
+              />
+            </td>
+            <td>
+              <img
+                src="pictures/79eea6f088179d7b6d85c3b492bed5d8.jpg"
+                alt=""
+                class="foto"
+              />
+            </td>
           </tr>
           <tr>
             <td>
@@ -217,6 +261,13 @@
             <td>
               <img
                 src="pictures/93477944-681C-4853-A073-3B3C30EBE7D6.jpeg"
+                alt=""
+                class="foto"
+              />
+            </td>
+            <td>
+              <img
+                src="pictures/f4b3058c2813af88ece7088bd24a2aa2.jpg"
                 alt=""
                 class="foto"
               />
