--- a/galerie.html
+++ b/galerie.html
@@ -16,8 +16,7 @@
         <li><a href="index.html#rezervace">Rezervace</a></li>
         <li><a href="index.html#cenik">Ceník</a></li>
         <li><a href="galerie.html">Galerie</a></li>
-        <li><a href="index.html#zabava">Zábava</a></li>
-        <li><a href="index.html#ubytovani">Ubytování</a></li>
+        <li><a href="index.html#sluzby">Nabízené služby</a></li>
         <li><a href="index.html#o-nas">O nás</a></li>
         <li>
           <img
