--- a/index.html
+++ b/index.html
@@ -12,13 +12,12 @@
   <body onload="fiktivniFirma()">
     <div class="topnav">
       <ul>
-        <li><a href="#kontakt">Kontakt</a></li>
-        <li><a href="#rezervace">Rezervace</a></li>
-        <li><a href="#cenik">Ceník</a></li>
+        <li><a href="index.html#kontakt">Kontakt</a></li>
+        <li><a href="index.html#rezervace">Rezervace</a></li>
+        <li><a href="index.html#cenik">Ceník</a></li>
         <li><a href="galerie.html">Galerie</a></li>
-        <li><a href="#zabava">Zábava</a></li>
-        <li><a href="#ubytovani">Ubytování</a></li>
-        <li><a href="#o-nas">O nás</a></li>
+        <li><a href="index.html#sluzby">Nabízené služby</a></li>
+        <li><a href="index.html#o-nas">O nás</a></li>
         <li>
           <img
             class="obr"
@@ -134,7 +133,7 @@
           </table>
         </div>
       </div>
-      <div class="ubytovani" id="ubytovani">
+      <div class="ubytovani" id="sluzby">
         <h1>Ubytování a občerstvení</h1>
         <p>Nabízíme pokoje s polopenzí a možnost občerstvení v našem bistru.</p>
         <br />
@@ -207,7 +206,7 @@
           </tr>
         </table>
       </div>
-      <div class="zabava" id="zabava">
+      <div class="zabava">
         <h1>Zábava</h1>
         <h3>Půjčovna šlapadel, lodiček a paddleboardu</h3>
         <ul>
@@ -270,6 +269,31 @@
           </li>
         </ul>
       </div>
+      <br />
+      <div class="pronajem-prostoru-container">
+        <h1>Pronájem prostorů</h1>
+        <p>
+          Prostory slouží pro firemní akce (např.teambuilding či školení),
+          společenskéakce (např. narozeninové oslavy), alemůžete naše prostory
+          využít třeba i pro Vaši svatbu nebo jinou speciální akci. <br />
+          Finální cena se odvíjí podle druhu zapůjčených prostor a podle počtu
+          pronajatých dnů. Pro více informací nás kontaktujte na telefoním
+          čísle, nebo na e-mailu.
+        </p>
+      </div>
+      <br />
+      <div class="kozi-produkty-container">
+        <h1>Kozí produkty</h1>
+        <p>
+          Vyrábíme čerstvé kozí produkty vnejvyšší kvalitě.Mléko pochází od koz
+          z našeho chovu,se kterými si můžete užít spoustuzábavy při
+          volnočasových aktivitách,které nabízíme v našem středisku.Kozí výrobky
+          používáme do jídel vnašem bistru. PokudVám zachutnají,můžete si je
+          koupit v našem bistru.Naše sýry se skvěle hodí i jakopozornost pro
+          Vaše známé.
+        </p>
+      </div>
+      <br />
       <div class="galerie" id="galerie">
         <h1>Galerie</h1>
         <p>Pro zobrazení fotek z našeho střediska klikněte zde &#8595;</p>
@@ -288,11 +312,11 @@
           </tr>
           <tr>
             <td>Dospělý</td>
-            <td>890 Kč</td>
+            <td>990 Kč</td>
           </tr>
           <tr>
             <td>Dítě do 12 let</td>
-            <td>550 Kč</td>
+            <td>650 Kč</td>
           </tr>
           <tr>
             <td>Student</td>
@@ -311,11 +335,11 @@
           </tr>
           <tr>
             <td>Přistýlka</td>
-            <td>70 Kč</td>
+            <td>150 Kč</td>
           </tr>
           <tr>
             <td>Dětská kolébka</td>
-            <td>50 Kč</td>
+            <td>100 Kč</td>
           </tr>
         </table>
         <br />
@@ -327,15 +351,15 @@
           </tr>
           <tr>
             <td>Šlapadlo</td>
-            <td>249 Kč</td>
+            <td>250 Kč</td>
           </tr>
           <tr>
             <td>Lodička</td>
-            <td>289 Kč</td>
+            <td>290 Kč</td>
           </tr>
           <tr>
             <td>Paddleboard</td>
-            <td>199 Kč</td>
+            <td>200 Kč</td>
           </tr>
         </table>
         <br />
@@ -350,7 +374,7 @@
             <td>450 Kč</td>
           </tr>
           <tr>
-            <td>Dítě</td>
+            <td>Dítě do 12 let</td>
             <td>350 Kč</td>
           </tr>
           <tr>
@@ -369,6 +393,10 @@
             <td>Dospělý</td>
             <td>120 Kč</td>
           </tr>
+          <tr>
+            <td>Studnet</td>
+            <td>90 Kč</td>
+          </tr>
         </table>
         <br />
         <h3>Na hodinu farmářem</h3>
@@ -382,12 +410,28 @@
             <td>250 Kč</td>
           </tr>
           <tr>
-            <td>Dítě</td>
+            <td>Dítě do 12 let</td>
             <td>150 Kč</td>
           </tr>
           <tr>
             <td>Student</td>
             <td>200 Kč</td>
+          </tr>
+        </table>
+        <br />
+        <h3>Celodenní akce</h3>
+        <table>
+          <tr>
+            <td>Uvnitř</td>
+            <td>15 000 Kč</td>
+          </tr>
+          <tr>
+            <td>Venku</td>
+            <td>12 000 Kč</td>
+          </tr>
+          <tr>
+            <td>Uvnitř i venku</td>
+            <td>25 000 Kč</td>
           </tr>
         </table>
       </div>
