--- a/index.html
+++ b/index.html
@@ -271,14 +271,13 @@
       </div>
       <br />
       <div class="pronajem-prostoru-container">
-        <h1>Pronájem prostorů</h1>
+        <h1>Pronájem prostorů <u onclick="podminky()">?</u></h1>
         <p>
           Prostory slouží pro firemní akce (např.teambuilding či školení),
           společenskéakce (např. narozeninové oslavy), alemůžete naše prostory
           využít třeba i pro Vaši svatbu nebo jinou speciální akci. <br />
-          Finální cena se odvíjí podle druhu zapůjčených prostor a podle počtu
-          pronajatých dnů. Pro více informací nás kontaktujte na telefoním
-          čísle, nebo na e-mailu.
+          Můžete si vybrat prostou místnost v útulné stodole anebo velkou
+          zahradu s výhledem na les a jezero.
         </p>
       </div>
       <br />
@@ -432,6 +431,38 @@
           <tr>
             <td>Uvnitř i venku</td>
             <td>25 000 Kč</td>
+          </tr>
+        </table>
+        <br />
+        <h3>Kozí produkty</h3>
+        <table>
+          <tr>
+            <td></td>
+            <td><b>Cena/100g</b></td>
+          </tr>
+          <tr>
+            <td>Čerstvý kozí sýr</td>
+            <td>60 Kč</td>
+          </tr>
+          <tr>
+            <td>Kozí sýr s bylinkami</td>
+            <td>70 Kč</td>
+          </tr>
+          <tr>
+            <td>Kozí sýr s brusinkami</td>
+            <td>70 Kč</td>
+          </tr>
+          <tr>
+            <td></td>
+            <td><b>Cena/litr</b></td>
+          </tr>
+          <tr>
+            <td>Kozí mléko</td>
+            <td>80 Kč</td>
+          </tr>
+          <tr>
+            <td>Kozí kefír</td>
+            <td>85 Kč</td>
           </tr>
         </table>
       </div>
