--- a/index.html
+++ b/index.html
@@ -262,19 +262,19 @@
           <li>
             <p>
               Speciálně nabízíme průnik do venkovského života s autentickým
-              zážitkem z dojení koz. Vyzkoušejte si dojení koz a jejich krmení,
-              kydání hnoje a odměnou pro vás bude domácí kozí mléko. Neomezeno
-              věkem
+              zážitkem. Vyzkoušejte si dojení koz a jejich krmení, práci
+              spojenou s jejich opečováváním a odměnou pro vás bude domácí kozí
+              mléko. Neomezeno věkem
             </p>
           </li>
         </ul>
       </div>
       <br />
       <div class="pronajem-prostoru-container">
-        <h1>Pronájem prostorů <u onclick="podminky()">?</u></h1>
+        <h1>Pronájem prostorů</h1>
         <p>
           Prostory slouží pro firemní akce (např.teambuilding či školení),
-          společenskéakce (např. narozeninové oslavy), alemůžete naše prostory
+          společenské akce (např. narozeninové oslavy), ale můžete naše prostory
           využít třeba i pro Vaši svatbu nebo jinou speciální akci. <br />
           Můžete si vybrat prostou místnost v útulné stodole anebo velkou
           zahradu s výhledem na les a jezero.
@@ -284,12 +284,11 @@
       <div class="kozi-produkty-container">
         <h1>Kozí produkty</h1>
         <p>
-          Vyrábíme čerstvé kozí produkty vnejvyšší kvalitě.Mléko pochází od koz
-          z našeho chovu,se kterými si můžete užít spoustuzábavy při
-          volnočasových aktivitách,které nabízíme v našem středisku.Kozí výrobky
-          používáme do jídel vnašem bistru. PokudVám zachutnají,můžete si je
-          koupit v našem bistru.Naše sýry se skvěle hodí i jakopozornost pro
-          Vaše známé.
+          Vyrábíme čerstvé kozí produkty v nejvyšší kvalitě. Mléko pochází od
+          koz z našeho chovu, se kterými si můžete užít spoustu zábavy při
+          volnočasových aktivitách, které nabízíme v našem středisku. Kozí
+          výrobky používáme do jídel vnašem bistru, kde si je můžete zakoupit.
+          Naše sýry se skvěle hodí i jako pozornost pro Vaše známé.
         </p>
       </div>
       <br />
@@ -298,6 +297,14 @@
         <p>Pro zobrazení fotek z našeho střediska klikněte zde &#8595;</p>
         <div class="button-default button-slanted">
           <a class="button-slanted-content" href="galerie.html">Galerie</a>
+        </div>
+      </div>
+      <br />
+      <div class="katalog" id="katalog">
+        <h1>Katalog</h1>
+        <p>Pro zobrazení našeho katalogu klikněte zde &#8595;</p>
+        <div class="button-default button-slanted">
+          <a class="button-slanted-content" href="katalog.pdf">katalog</a>
         </div>
       </div>
       <div class="cenik-container">
@@ -421,16 +428,21 @@
         <h3>Celodenní akce</h3>
         <table>
           <tr>
-            <td>Uvnitř</td>
+            <td>Stodola</td>
             <td>15 000 Kč</td>
           </tr>
           <tr>
-            <td>Venku</td>
+            <td>Zahrada</td>
             <td>12 000 Kč</td>
           </tr>
           <tr>
-            <td>Uvnitř i venku</td>
+            <td>Stodola + zahrada</td>
             <td>25 000 Kč</td>
+          </tr>
+          <tr>
+            <td colspan="2">
+              Pro bližší informace klikněte zde <u onclick="podminky()">?</u>
+            </td>
           </tr>
         </table>
         <br />
@@ -551,14 +563,7 @@
                 E-mail: <a href="mailto:ff.lont@seznam.cz">ff.lont@seznam.cz</a>
               </p>
             </td>
-            <td>
-              <p>
-                <a
-                  href="https://www.facebook.com/profile.php?id=100073668304459"
-                  >Facebook</a
-                >
-              </p>
-            </td>
+            <td></td>
           </tr>
           <tr>
             <td>
